[project]
name = "l2it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "diffusers>=0.35.2",
    "huggingface-hub>=0.36.0",
    "peft>=0.18.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
]

